--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-<<<<<<< HEAD
-		
-=======
 		<link rel="icon" href="%sveltekit.assets%/uruggo.png" />
->>>>>>> 9155008da35666e05d808ffd88a6b1bdc81707b9
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body class="bg-[#000000]">
+	<body class="bg-black">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
